--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-tailwindcss": "^3.18.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
