--- a/package.json
+++ b/package.json
@@ -50,10 +50,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=0",
-      "prettier --write"
-    ],
-    "**/*.{json,md,css,scss,html}": [
+      "eslint --fix",
       "prettier --write"
     ]
   }
