--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zustand": "^5.0.3"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
