--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
+    "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
