--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.19.0",
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query": "^5.66.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -32,6 +33,7 @@
     "@typescript-eslint/parser": "^8.23.0",
     "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
+    "date-fns": "^4.1.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
@@ -44,6 +46,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "react-day-picker": "^9.5.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
