--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^3.1.2",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@typescript-eslint/parser": "^8.23.0",
     "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
+    "date-fns": "^4.1.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
