--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "flowbite": "^3.1.2",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -30,6 +28,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
