--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.10.2",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
